src/task/tasks/translations/snapshots/mob_rs__task__tasks__translations__tests__parse_project_name_bsa_extractor.snap
---
source: src/task/tasks/translations/tests.rs
expression: "parse_project_name(\"mod-organizer-2.bsa_extractor\")"
---
Some(
    "bsa_extractor",
)
