src/task/tasks/translations/snapshots/mob_rs__task__tasks__translations__tests__parse_project_name_invalid.snap
---
source: src/task/tasks/translations/tests.rs
expression: "parse_project_name(\"invalid-name\")"
---
None
