src/task/tasks/translations/snapshots/mob_rs__task__tasks__translations__tests__translations_task_naming.snap
---
source: src/task/tasks/translations/tests.rs
expression: cases
---
- translations
- translations
